--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ alembic==1.6.5
 Babel==2.9.1
 blinker==1.4
 click==8.0.1
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==2.0.1
 Flask-BabelEx==0.9.4
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Migrate==3.0.1
 Flask-Principal==0.4.0
-Flask-Security==3.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.0
+idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.4
